--- a/src/templates/partials/components/insider.hbs
+++ b/src/templates/partials/components/insider.hbs
@@ -25,9 +25,22 @@
 	</span>
 </div>
 <div class="insider">
-	<span>
-		BECOME A<br><a href="">{{ site.mall-name }} INSIDER</a><br>AND YOU'LL BE ENTERED<br>TO WIN $500!
-		<a href="" class="btn button-primary">Join Now</a>
-	</span>
+	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	viewBox="0 0 13 35" enable-background="new 0 0 13 35" xml:space="preserve" class="pinch">
+	<g>
+		<defs>
+			<rect id="SVGID_1_" y="0" width="13" height="35"/>
+		</defs>
+		<clipPath id="SVGID_2_">
+			<use xlink:href="#SVGID_1_"  overflow="visible"/>
+		</clipPath>
+		<path class="pinch-color" clip-path="url(#SVGID_2_)" d="M0,35c2-16.5,13-17.7,13-17.7S2,16.4,0,0V35z"/>
+	</g>
+</svg>
+
+<span>
+	BECOME A<br><a href="">{{ site.mall-name }} INSIDER</a><br>AND YOU'LL BE ENTERED<br>TO WIN $500!
+	<a href="" class="btn button-primary">Join Now</a>
+</span>
 </div>
 </div>
